--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "build": "rm -rf dist && webpack --mode development",
-    "start": "node ./dist/server.js"
-  },
+"scripts": {
+  "build": "rm -rf dist && webpack --mode development --config webpack.server.config.js && webpack --mode development",
+  "start": "node ./dist/server.js"
+},
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -16,8 +16,11 @@
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "file-loader": "^5.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
